no-jira: try to fix largest revisions query